feat: add update-brand endpoint
