# openapi.json
@@ -740,6 +740,18 @@
               }
             }
           },
+          "400": {
+            "description": "Brand name is taken.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Brand name is taken.",
+                  "error": "BRAND_NAME_IS_TAKEN",
+                  "statusCode": 400
+                }
+              }
+            }
+          },
           "404": {
             "description": "Workspace not found.",
             "content": {
@@ -754,6 +766,69 @@
           }
         },
         "summary": "Create brand",
+        "tags": [
+          "Workspace / Brands"
+        ]
+      }
+    },
+    "/api/v1/workspace/brands/{brandId}": {
+      "put": {
+        "description": "Update a brand (Do not include addresses infos).",
+        "operationId": "updateBrand",
+        "parameters": [
+          {
+            "name": "X-Workspace-Id",
+            "in": "header",
+            "description": "Id from selected workspace",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "brandId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateBrandDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Brand updated successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UpdateBrandResponseDto"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Brand name is taken.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Brand name is taken.",
+                  "error": "BRAND_NAME_IS_TAKEN",
+                  "statusCode": 400
+                }
+              }
+            }
+          }
+        },
+        "summary": "Update brand",
         "tags": [
           "Workspace / Brands"
         ]
@@ -817,6 +892,47 @@
           }
         },
         "summary": "Create address",
+        "tags": [
+          "Workspace / Brands"
+        ]
+      },
+      "delete": {
+        "description": "Delete brand addresses for given ids.",
+        "operationId": "deleteBrandAddresses",
+        "parameters": [
+          {
+            "name": "X-Workspace-Id",
+            "in": "header",
+            "description": "Id from selected workspace",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/DeleteBrandAddressesDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Addresses deleted successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DeleteBrandAddressesResponseDto"
+                }
+              }
+            }
+          }
+        },
+        "summary": "Delete address",
         "tags": [
           "Workspace / Brands"
         ]
@@ -1991,6 +2107,163 @@
           "workspace"
         ]
       },
+      "UpdateBrandDto": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "segment": {
+            "type": "string",
+            "enum": [
+              "SUPERMARKET",
+              "EVENTS",
+              "STORE",
+              "PHARMACY",
+              "CLINIC",
+              "RESTAURANT",
+              "REAL_ESTATE",
+              "AUTOMOTIVE",
+              "RADIO",
+              "OTHER"
+            ]
+          },
+          "description": {
+            "type": "object",
+            "nullable": true
+          },
+          "slogan": {
+            "type": "object",
+            "nullable": true
+          },
+          "phoneNumber": {
+            "type": "object",
+            "nullable": true
+          },
+          "whatsapp": {
+            "type": "object",
+            "nullable": true
+          },
+          "instagram": {
+            "type": "object",
+            "nullable": true
+          },
+          "tiktok": {
+            "type": "object",
+            "nullable": true
+          },
+          "facebook": {
+            "type": "object",
+            "nullable": true
+          },
+          "website": {
+            "type": "object",
+            "nullable": true
+          }
+        },
+        "required": [
+          "name",
+          "segment"
+        ]
+      },
+      "UpdateBrandResponseDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "name": {
+            "type": "string"
+          },
+          "segment": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "logoKey": {
+            "type": "string",
+            "nullable": true
+          },
+          "slogan": {
+            "type": "string",
+            "nullable": true
+          },
+          "phoneNumber": {
+            "type": "string",
+            "nullable": true
+          },
+          "whatsapp": {
+            "type": "string",
+            "nullable": true
+          },
+          "instagram": {
+            "type": "string",
+            "nullable": true
+          },
+          "tiktok": {
+            "type": "string",
+            "nullable": true
+          },
+          "facebook": {
+            "type": "string",
+            "nullable": true
+          },
+          "website": {
+            "type": "string",
+            "nullable": true
+          },
+          "spots": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/SpotEntityDto"
+            }
+          },
+          "addresses": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/BrandAddressEntityDto"
+            }
+          },
+          "workspaceId": {
+            "type": "string"
+          },
+          "workspace": {
+            "type": "object"
+          }
+        },
+        "required": [
+          "id",
+          "createdAt",
+          "updatedAt",
+          "name",
+          "segment",
+          "description",
+          "logoKey",
+          "slogan",
+          "phoneNumber",
+          "whatsapp",
+          "instagram",
+          "tiktok",
+          "facebook",
+          "website",
+          "spots",
+          "addresses",
+          "workspaceId",
+          "workspace"
+        ]
+      },
       "CreateBrandAddressResponseDto": {
         "type": "object",
         "properties": {
@@ -2044,6 +2317,31 @@
           "brandId",
           "brand",
           "responsibles"
+        ]
+      },
+      "DeleteBrandAddressesDto": {
+        "type": "object",
+        "properties": {
+          "ids": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "required": [
+          "ids"
+        ]
+      },
+      "DeleteBrandAddressesResponseDto": {
+        "type": "object",
+        "properties": {
+          "success": {
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "success"
         ]
       },
       "DeleteSpotsDto": {
